--- a/advanced-css-course-master/Natours/starter/index.html
+++ b/advanced-css-course-master/Natours/starter/index.html
@@ -70,6 +70,59 @@
           </div>
         </div>
       </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <div class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Most poplur tours
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            1
+          </div>
+          <div class="col-1-of-3">
+            2
+          </div>
+          <div class="col-1-of-3">
+            3
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
