--- a/advanced-css-course-master/Natours/starter/index.html
+++ b/advanced-css-course-master/Natours/starter/index.html
@@ -63,9 +63,21 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+              <img
+                src="img/nat-1-large.jpg"
+                alt="Photo 1"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/nat-2-large.jpg"
+                alt="Photo 2"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/nat-3-large.jpg"
+                alt="Photo 3"
+                class="composition__photo composition__photo--p3"
+              />
             </div>
           </div>
         </div>
@@ -76,29 +88,57 @@
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-world"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
-              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                sapiente dicta odit voluptas, laudantium facilis aut eius
+                aliquid veritatis maxime neque, laboriosam impedit repellat
+                totam molestiae sit facere a quam.m
+              </p>
             </div>
           </div>
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-compass"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
-              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                sapiente dicta odit voluptas, laudantium facilis aut eius
+                aliquid veritatis maxime neque, laboriosam impedit repellat
+                totam molestiae sit facere a quam.m
+              </p>
             </div>
           </div>
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-map"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
-              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                sapiente dicta odit voluptas, laudantium facilis aut eius
+                aliquid veritatis maxime neque, laboriosam impedit repellat
+                totam molestiae sit facere a quam.m
+              </p>
             </div>
           </div>
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-heart"></i>
-              <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
-              <p class="feature-box__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sapiente dicta odit voluptas, laudantium facilis aut eius aliquid veritatis maxime neque, laboriosam impedit repellat totam molestiae sit facere a quam.m</p>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
+                sapiente dicta odit voluptas, laudantium facilis aut eius
+                aliquid veritatis maxime neque, laboriosam impedit repellat
+                totam molestiae sit facere a quam.m
+              </p>
             </div>
           </div>
         </div>
@@ -106,23 +146,102 @@
 
       <div class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">
-            Most poplur tours
-          </h2>
+          <h2 class="heading-secondary">Most poplur tours</h2>
         </div>
 
         <div class="row">
           <div class="col-1-of-3">
-            1
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture-1">&nbsp;</div>
+                <div class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">The sea explorer</span>
+                </div>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tours</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tours guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$297</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-1-of-3">
-            2
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture-2">&nbsp;</div>
+                <div class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">The Forst Hiker</span>
+                </div>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tours</li>
+                    <li>Up to 40 people</li>
+                    <li>6 tours guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: medium</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$149</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-1-of-3">
-            3
+            <div class="card">
+              <div class="card__side card__side--front">
+                <div class="card__picture card__picture-3">&nbsp;</div>
+                <div class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
+                </div>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tours</li>
+                    <li>Up to 14 people</li>
+                    <li>2 tours guides</li>
+                    <li>Sleep in provided tents</li>
+                    <li>Difficulty: hard</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">Only</p>
+                    <p class="card__price-value">$399</p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now!</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
+
+        <div class="u-center-text u-margin-top-big">
+          <a href="#" class="btn btn--green">Discover all tours</a>
+        </div>
       </div>
+
+
     </main>
   </body>
 </html>
