--- a/advanced-css-course-master/Natours/starter/index.html
+++ b/advanced-css-course-master/Natours/starter/index.html
@@ -144,7 +144,7 @@
         </div>
       </section>
 
-      <div class="section-tours">
+      <section class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most poplur tours</h2>
         </div>
@@ -155,7 +155,9 @@
               <div class="card__side card__side--front">
                 <div class="card__picture card__picture-1">&nbsp;</div>
                 <div class="card__heading">
-                  <span class="card__heading-span card__heading-span--1">The sea explorer</span>
+                  <span class="card__heading-span card__heading-span--1"
+                    >The sea explorer</span
+                  >
                 </div>
                 <div class="card__details">
                   <ul>
@@ -183,7 +185,9 @@
               <div class="card__side card__side--front">
                 <div class="card__picture card__picture-2">&nbsp;</div>
                 <div class="card__heading">
-                  <span class="card__heading-span card__heading-span--2">The Forst Hiker</span>
+                  <span class="card__heading-span card__heading-span--2"
+                    >The Forst Hiker</span
+                  >
                 </div>
                 <div class="card__details">
                   <ul>
@@ -211,7 +215,9 @@
               <div class="card__side card__side--front">
                 <div class="card__picture card__picture-3">&nbsp;</div>
                 <div class="card__heading">
-                  <span class="card__heading-span card__heading-span--3">The Snow Adventurer</span>
+                  <span class="card__heading-span card__heading-span--3"
+                    >The Snow Adventurer</span
+                  >
                 </div>
                 <div class="card__details">
                   <ul>
@@ -239,9 +245,75 @@
         <div class="u-center-text u-margin-top-big">
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
-      </div>
+      </section>
 
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+              Your browser is not supported!
+          </video>
+        </div>
 
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people geniunly happly</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                facere, tenetur, sapiente recusandae saepe possimus quibusdam
+                vero magnam harum nobis enim rem, nemo tempore nesciunt eius sed
+                officia dolore laudantium.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! my life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                facere, tenetur, sapiente recusandae saepe possimus quibusdam
+                vero magnam harum nobis enim rem, nemo tempore nesciunt eius sed
+                officia dolore laudantium.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
+
+      
     </main>
   </body>
 </html>
