--- a/advanced-css-course-master/Natours/starter/index.html
+++ b/advanced-css-course-master/Natours/starter/index.html
@@ -250,9 +250,9 @@
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop>
-            <source src="img/video.mp4" type="video/mp4">
-            <source src="img/video.webm" type="video/webm">
-              Your browser is not supported!
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
           </video>
         </div>
 
@@ -322,26 +322,50 @@
                   <h2 class="heading-secondary">Start book now</h2>
                 </div>
                 <div class="form__group">
-                  <input type="text" class="form__input" placeholder="Full Name" id="name" required autocomplete="off">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full Name"
+                    id="name"
+                    required
+                    autocomplete="off"
+                  />
                   <label for="name" class="form__label">Full Name</label>
                 </div>
 
                 <div class="form__group">
-                  <input type="email" class="form__input" placeholder="Email address" id="email" required autocomplete="off">
+                  <input
+                    type="email"
+                    class="form__input"
+                    placeholder="Email address"
+                    id="email"
+                    required
+                    autocomplete="off"
+                  />
                   <label for="email" class="form__label">Email address</label>
                 </div>
 
                 <div class="form__group u-margin-bottom-medium">
                   <div class="form__radio-group">
-                    <input type="radio" class="form__radio-input" id="small" name="size">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="small"
+                      name="size"
+                    />
                     <label for="small" class="form__radio-label">
                       <span class="form__radio-button"></span>
                       Small tour group
                     </label>
                   </div>
 
-                  <div class="form__radio-group ">
-                    <input type="radio" class="form__radio-input" id="large" name="size">
+                  <div class="form__radio-group">
+                    <input
+                      type="radio"
+                      class="form__radio-input"
+                      id="large"
+                      name="size"
+                    />
                     <label for="large" class="form__radio-label">
                       <span class="form__radio-button"></span>
                       Large tour group
@@ -352,12 +376,49 @@
                 <div class="form__group">
                   <button class="btn btn--green">Next Step &rarr;</button>
                 </div>
-
               </form>
             </div>
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Carrers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy policy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-1-of-2">
+          <div class="footer__copyright">
+            Bulit my <a href="#" class="footer__link">Yuenu</a> form Udemy
+            cousrse, Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Voluptatum at similique fuga, quas cumque quod asperiores est? Velit
+            dolores illum dolor iure accusantium provident odit quae incidunt
+            dolorem, perspiciatis esse.
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
