--- a/advanced-css-course-master/Natours/starter/index.html
+++ b/advanced-css-course-master/Natours/starter/index.html
@@ -16,9 +16,13 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
-
     <div class="navigation">
-      <input type="checkbox" name="navigation__checkbox" id="navi-toggle" class="navigation__checkbox">
+      <input
+        type="checkbox"
+        name="navigation__checkbox"
+        id="navi-toggle"
+        class="navigation__checkbox"
+      />
       <label for="navi-toggle" class="navigation__button">
         <span class="navigation__icon">&nbsp;</span>
       </label>
@@ -27,11 +31,25 @@
 
       <nav class="navigation__nav">
         <ul class="navigation__list">
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Notus</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>01</span>About Notus</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>02</span>Your benefits</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"
+              ><span>03</span>Popular tours</a
+            >
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>04</span>Stories</a>
+          </li>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link"><span>05</span>Book now</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -46,7 +64,7 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
 
@@ -163,7 +181,7 @@
         </div>
       </section>
 
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most poplur tours</h2>
         </div>
@@ -194,7 +212,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$297</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -224,7 +242,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$149</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -254,7 +272,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$399</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now!</a>
+                  <a href="#popup" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
@@ -262,7 +280,7 @@
         </div>
 
         <div class="u-center-text u-margin-top-big">
-          <a href="#" class="btn btn--green">Discover all tours</a>
+          <a href="#section-tours" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
 
@@ -439,5 +457,37 @@
         </div>
       </div>
     </footer>
+
+    <div class="popup" id="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="./img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="./img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <a href="#section-tours" class="popup__close">&times;</a>
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; PLease read these terms before bookings
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia fugit
+            illo rerum, repellendus expedita sed voluptatibus neque nobis
+            mollitia accusantium et est aspernatur adipisci, quos blanditiis
+            impedit omnis quasi. Aperiam.Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Quia fugit illo rerum, repellendus expedita sed
+            voluptatibus neque nobis mollitia accusantium et est aspernatur
+            adipisci, quos blanditiis impedit omnis quasi. Aperiam.Lorem ipsum
+            dolor sit amet consectetur adipisicing elit. Quia fugit illo rerum,
+            repellendus expedita sed voluptatibus neque nobis mollitia
+            accusantium et est aspernatur adipisci, quos blanditiis impedit
+            omnis quasi. Aperiam.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
