--- a/advanced-css-course-master/Nexter/starter/index.html
+++ b/advanced-css-course-master/Nexter/starter/index.html
@@ -85,14 +85,19 @@
     </section>
 
     <div class="story__pictures">
-        <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img-1">
-        <img src="img/story-2.jpeg" alt="New house" class="story__img-2">
-
+      <img
+        src="img/story-1.jpeg"
+        alt="Couple with new house"
+        class="story__img-1"
+      />
+      <img src="img/story-2.jpeg" alt="New house" class="story__img-2" />
     </div>
 
     <div class="story__content">
       <h3 class="heading-3 mb-sm">Happy Customers</h3>
-      <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&ldquo;</h2>
+      <h2 class="heading-2 heading-2--dark mb-md">
+        &ldquo;The best decision of our lives&ldquo;
+      </h2>
       <p class="story__text">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
         distinctio necessitatibus pariatur voluptatibus. Quidem consequatur
@@ -101,7 +106,206 @@
       <button class="btn cta-btn">Find your own home</button>
     </div>
 
-    <section class="home">Homes</section>
+    <section class="homes">
+
+      <div class="home">
+        <img src="img/house-1.jpeg" alt="House 1" class="home__img" />
+        <svg class="home__link">
+          <use href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful Family House</h5>
+        <div class="home__location">
+          <svg>
+            <use href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>USA</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>5 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>325 m <sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+
+      <div class="home">
+        <img src="img/house-2.jpeg" alt="House 2" class="home__img" />
+        <svg class="home__link">
+          <use href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Modern Glass Villa</h5>
+        <div class="home__location">
+          <svg>
+            <use href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>UK</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>3 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>225 m <sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$2,750,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+
+      <div class="home">
+        <img src="img/house-3.jpeg" alt="House 3" class="home__img" />
+        <svg class="home__link">
+          <use href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Cozy country House</h5>
+        <div class="home__location">
+          <svg>
+            <use href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>China</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>4 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>118 m <sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,200,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+
+      <div class="home">
+        <img src="img/house-4.jpeg" alt="House 4" class="home__img" />
+        <svg class="home__link">
+          <use href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Large Rustical Villa</h5>
+        <div class="home__location">
+          <svg>
+            <use href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>UK</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>6 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>480 m <sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$1,950,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+
+      <div class="home">
+        <img src="img/house-5.jpeg" alt="House 5" class="home__img" />
+        <svg class="home__link">
+          <use href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Majestic Palace House</h5>
+        <div class="home__location">
+          <svg>
+            <use href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Germany</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>18 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>4320 m <sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$8,200,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+
+      <div class="home">
+        <img src="img/house-6.jpeg" alt="House 6" class="home__img" />
+        <svg class="home__link">
+          <use href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Modern Family Apartment</h5>
+        <div class="home__location">
+          <svg>
+            <use href="img/sprite.svg#icon-map-pin"></use>
+          </svg>
+          <p>Italy</p>
+        </div>
+        <div class="home__rooms">
+          <svg>
+            <use href="img/sprite.svg#icon-profile-male"></use>
+          </svg>
+          <p>3 rooms</p>
+        </div>
+        <div class="home__area">
+          <svg>
+            <use href="img/sprite.svg#icon-expand"></use>
+          </svg>
+          <p>180 m <sup>2</sup></p>
+        </div>
+        <div class="home__price">
+          <svg>
+            <use href="img/sprite.svg#icon-key"></use>
+          </svg>
+          <p>$780,000</p>
+        </div>
+        <button class="btn home__btn">Contact realtor</button>
+      </div>
+    </section>
 
     <section class="gallery">Gallery</section>
 
