fix: bookmark bug

--- a/homepage/website04/index.html
+++ b/homepage/website04/index.html
@@ -37,20 +37,23 @@
         <div class="lead text-black-50 mb-5">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</div>
         <div class="buttons d-flex justify-content-between">
           <a href="#cta-btn" class="btn btn-cyan fw-bolder rounded-pill custom-btn">Back this projet</a>
-          <a href="#cta-btn" id="bookmark" class="bg-gray text-muted fw-bolder rounded-pill custom-btn">Bookmark</a>
+          <a href="#cta-btn" id="bookmark" class="fw-bolder rounded-pill custom-btn">
+            <svg viewBox="0 0 60 55" width="52" height="52" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#2F2F2F" cx="28" cy="28" r="28"/><path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z"/></g></svg>
+            <span>Bookmark</span>
+          </a>
         </div>
       </div>
       <!-- box2 -->
       <div class="box">
-        <div class="row mb-5">
+        <div class="row mb-5 gap-4 gap-md-0">
           <div class="col-12 col-md-4">
-            <div class="target text-muted fs-6"><p class="fs-1 fw-bolder text-dark">$89,914</p>of $100,000 backed</div>
+            <div class="target text-muted fs-6 text-center text-md-start"><p class="fs-1 fw-bolder text-dark mb-1">$89,914</p>of $100,000 backed</div>
           </div>
           <div class="col-12 col-md-4">
-            <div class="total-target text-muted fs-6"><p class="fs-1 fw-bolder text-dark">5,007</p>total backers</div>
+            <div class="total-target text-muted fs-6 text-center text-md-start"><p class="fs-1 fw-bolder text-dark mb-1">5,007</p>total backers</div>
           </div>
           <div class="col-12 col-md-4">
-            <div class="dats-left text-muted fs-6"><p class=" fs-1 fw-bolder text-dark">56 </p>days left</div>
+            <div class="dats-left text-muted fs-6 text-center text-md-start"><p class=" fs-1 fw-bolder text-dark mb-1">56 </p>days left</div>
           </div>
         </div>
         <div class="row">
@@ -192,5 +195,6 @@
 
   <!-- Bootstrap CDN import -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+  <script src="./assets/app.js"></script>
 </body>
 </html>
