--- a/homepage/website04/index.html
+++ b/homepage/website04/index.html
@@ -36,7 +36,7 @@
         <div class="title fs-3 fw-bolder mb-3">Mastercraft Bamboo Monitor Riser</div>
         <div class="lead text-black-50 mb-5">A beautiful & handcrafted monitor stand to reduce neck and eye strain.</div>
         <div class="buttons d-flex justify-content-between">
-          <a href="#cta-btn" class="btn btn-cyan fw-bolder rounded-pill custom-btn">Back this projet</a>
+          <a href="#cta-btn" class="btn btn-cyan fw-bolder rounded-pill custom-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Back this projet</a>
           <a href="#cta-btn" id="bookmark" class="fw-bolder rounded-pill custom-btn">
             <svg viewBox="0 0 60 55" width="52" height="52" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><circle fill="#2F2F2F" cx="28" cy="28" r="28"/><path fill="#B1B1B1" d="M23 19v18l5-5.058L33 37V19z"/></g></svg>
             <span>Bookmark</span>
@@ -119,31 +119,76 @@
           </div>
         </div>
       </div>
-
-
-
-
-
       </div>
-
-  </div>
+    </div>
     </div>
   </section>
 
+<!-- Selection modal start -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg rounded-3">
+      <div class="modal-content p-2 p-md-4">
+        <div class="modal-header border-0">
+          <div class="modal-title">
+            <h3 class="heading mb-3" id="exampleModalLabel">Back this project</h3>
+            <h6 class="text-muted">Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</h6>
+          </div>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
 
+        <div class="modal-body">
+          <!-- CARD1 -->
+     
+          <div class="card p-4 mb-4">
+            <div class="form-check inline">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+              <label class="form-check-label fw-bolder ms-3" for="flexRadioDefault1"></label>
+              <h6 class="ms-3">Pledge with no reward</h6>
+            </div>
+            <div class="card-body text-muted ms-4">
+              Choose to support us without a reward if you simply believe in our project. As a backer, 
+              you will be signed up to receive product updates via email.</div>
+          </div>
+
+            <!-- CARD2 -->
+            <div class="card p-4 mb-4">
+              <div class="form-check inline">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+                <label class="form-check-label fw-bolder ms-3" for="flexRadioDefault2"></label>
+                <h6 class="ms-3">Pledge with no reward</h6>
+              </div>
+              <div class="card-body text-muted ms-4">
+                Choose to support us without a reward if you simply believe in our project. As a backer, 
+                you will be signed up to receive product updates via email.</div>
+            </div>
+
+              <!-- CARD3 -->
+          <div class="card p-4 mb-4">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+              <label class="form-check-label fw-bolder ms-3" for="flexRadioDefault3"></label>
+              <h6 class="ms-3">Pledge with no reward</h6>
+            </div>
+            <div class="card-body text-muted ms-4">Choose to support us without a reward if you simply believe in our project. As a backer, 
+              you will be signed up to receive product updates via email.</div>
+          </div>
+
+            <!-- CARD4 -->
+            <div class="card p-4 disable">
+              <div class="form-check">
+                <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
+                <label class="form-check-label fw-bolder ms-3" for="flexRadioDefault4"></label>
+                <h6 class="ms-3">Pledge with no reward</h6>
+              </div>
+              <div class="card-body text-muted ms-4">Choose to support us without a reward if you simply believe in our project. As a backer, 
+                you will be signed up to receive product updates via email.</div>
+            </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
   
- 
-  
-  
-
-  <!-- Selection modal start -->
-
-  Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
-
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
 
   Bamboo Stand
   Pledge $25 or more
