fix: default theme

--- a/homepage/website03/index.html
+++ b/homepage/website03/index.html
@@ -26,7 +26,7 @@
       <div class="header-theme main-text fw-bolder d-flex gap-3 w-100 mw-md-auto justify-content-between justify-content-md-end">
         <span class="align-self-center">Dark Mode</span>
         <label class="toggle-control">
-          <input id="theme-control" type="checkbox" checked="checked">
+          <input id="theme-control" type="checkbox">
           <span class="control"></span>
         </label>
       </div>
