chore: merge conflict

--- a/line-page/index.html
+++ b/line-page/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./style.css" />
-		<title>LINE | 始終陪伴在你身邊</title>
-	</head>
-	<body>
-		<header class="header">
-			<a class="logo" href="/">
-				<img src="./images/icon-title-pc.png" alt="logo" />
-			</a>
-		</header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>LINE | 始終陪伴在你身邊</title>
+  </head>
+  <body>
+    <div class="mv">
+      <div class="mvIn"></div>
+      <div class="kv">
+        <ul class="kvList"></ul>
+      </div>
+    </div>
+    <header class="header">
+      <a class="logo" href="/">
+        <img src="./images/icon-title-pc.png" alt="logo" />
+      </a>
+    </header>
+  </body>
 
-		<section id="kv" class="kv">
-			<ul class="kvList"></ul>
-		</section>
-	</body>
-
-	<script src="./app.js"></script>
+  <script src="./app.js"></script>
 </html>
