feat: complete line offical animation

--- a/line-page/index.html
+++ b/line-page/index.html
@@ -8,17 +8,24 @@
     <title>LINE | 始終陪伴在你身邊</title>
   </head>
   <body>
-    <div class="mv">
-      <div class="mvIn"></div>
-      <div class="kv">
-        <ul class="kvList"></ul>
-      </div>
-    </div>
     <header class="header">
       <a class="logo" href="/">
         <img src="./images/icon-title-pc.png" alt="logo" />
       </a>
+      <ul class="navigation">
+        <li>Life on LINE</li>
+        <li>通訊軟體</li>
+        <li>服務總覽</li>
+      </ul>
+      <div class="currentLang">TW</div>
     </header>
+
+    <div class="mv">
+      <div class="kv">
+        <ul class="kvList"></ul>
+      </div>
+    </div>
+    <section class="content"></section>
   </body>
 
   <script src="./app.js"></script>
