feat: add firework

--- a/medium/rotate-animation/index.html
+++ b/medium/rotate-animation/index.html
@@ -8,16 +8,20 @@
     <title>Rotate animation</title>
   </head>
   <body>
-    <main>
-      <img src="./mountain-1.jpg" alt="" />
-      <img src="./mountain-2.jpg" alt="" />
-      <img src="./mountain-3.jpg" alt="" />
-
+    <div class="matching">
+      <img class="avatar" src="./mountain-1.jpg" alt="" />
+      <img class="avatar" src="./mountain-2.jpg" alt="" />
+      <img class="avatar" src="./mountain-3.jpg" alt="" />
       <div class="bottom">
         <img src="./search.svg" alt="" />
         <span class="text">Searching...</span>
       </div>
-    </main>
+    </div>
+    <div class="result">
+      <img class="avatar" src="./mountain-2.jpg" alt="" />
+      <p>Ngamratanapaibool Sutthasinee</p>
+      <img class="firework" src="./firework.gif" alt="" />
+    </div>
     <script src="./app.js"></script>
   </body>
 </html>
